# SeedLog

./: .gitignore  README.md  app.js  build-capture-portable.mjs  build-frontend.mjs  dev-server.mjs  index.html  mini.css  mini.html  mini.js  package-lock.json  package.json  styles.css  supabase-sync-schema.sql
.claude/: launch.json
.github/workflows/: build-windows-capture.yml  deploy-pages.yml
archive/: signals-constellation.js
assets/: seedlog_icon.png.86pct-backup  seedlog_icon.png.large-rounded-backup  seedlog_icon.png.square-backup
src-tauri/: Cargo.toml  tauri.capture.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.icns.86pct-backup  icon.icns.large-rounded-backup  icon.icns.square-backup  icon.ico.86pct-backup  icon.ico.code-by-noah-backup  icon.ico.large-rounded-backup  icon.ico.square-backup  icon.png.86pct-backup  icon.png.code-by-noah-backup  icon.png.large-rounded-backup  icon.png.square-backup
src-tauri/migrations/: 001_create_seedlog_items.sql  002_create_thread_overrides.sql  003_add_priority_fields.sql  004_create_project_meta.sql  005_create_monthly_reflections.sql  006_create_daily_reviews.sql  007_add_daily_planning_fields.sql  008_add_daily_mental_debugs.sql  009_add_item_manual_order.sql  010_add_item_sub_items.sql  011_create_projects.sql  012_add_item_cultivation_fields.sql  013_add_item_defer_fields.sql  014_create_app_kv.sql  015_add_item_deleted_at.sql  016_add_item_source_tag.sql
src-tauri/src/: lib.rs  main.rs
