[package]
name = "seedlog"
version = "0.1.0"
description = "SeedLog desktop app"
authors = ["SeedLog"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "seedlog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "seedlog"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
